--- a/YCameraViewController/YCameraViewController.xib
+++ b/YCameraViewController/YCameraViewController.xib
@@ -163,13 +163,13 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1zT-OA-N2D">
-                            <rect key="frame" x="230" y="14" width="80" height="64"/>
+                            <rect key="frame" x="210" y="6" width="100" height="80"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="80" id="Bui-7k-lYH"/>
+                                <constraint firstAttribute="width" constant="100" id="Bui-7k-lYH"/>
                                 <constraint firstAttribute="width" secondItem="1zT-OA-N2D" secondAttribute="height" multiplier="5:4" id="dKU-3e-LMb"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                            <state key="normal" title="Done">
+                            <state key="normal" title="Use Image">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
